# aiida-nims-scheduler

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  setup.json
.github/: check_version.py
.github/workflows/: ci.yml  publish-on-pypi.yml
aiida_nims_scheduler/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py
aiida_nims_scheduler/schedulers/: pbs_nims.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: example_01.py
tests/: test_calculations.py  test_cli.py
